# voice-recorder

./: .gitignore  Cargo.toml  config.json  package-lock.json  package.json
docs/: QUICK_RECORD_FLOW.md  README.md  README_CN.md  REFACTOR_PLAN.md  installation_guide.md  prompt_backup.md
scripts/: docker-db.sh  setup_refactor.sh
src/: ai.rs  audio.rs  backfill.rs  keyboard.rs  main.rs  storage.rs  web.rs
src/ai/: ollama.rs
src/api/: mod.rs
src/api/routes/: health.rs  mod.rs
src/api/routes/v1/: analysis.rs  audio.rs  ideas.rs  mod.rs  notes.rs  ollama.rs  sessions.rs  tasks.rs  transcripts.rs
src/config/: mod.rs
src/ollama/: mod.rs  mod_v2.rs
src/repository/: mod.rs  postgres.rs  traits.rs
src/services/: mod.rs  ollama.rs  traits.rs
test/: test_analysis.py  test_language_detection.py  test_multilingual_prompt.py  test_ollama_analysis.rs  test_ollama_request.py  test_rust_analysis.py  test_transcript.txt
web/: index.html  package-lock.json  package.json  temp.css
web/src/: App.css  App.tsx
web/src/components/: Recorder.tsx
web/src/pages/: Detail.tsx  Home.css  Home.tsx  Ideas.tsx  Tasks.tsx
web/src/services/: api.ts
web/src/types/: index.ts
web/src/utils/: dataTransform.ts  index.ts
