[package]
name = "voice-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
rodio = "0.17"
cpal = "0.15"
hound = "3.5"
rdev = "0.4"
log = "0.4"
env_logger = "0.11"
async-openai = "0.18.2"
crossbeam-channel = "0.5"
anyhow = "1.0"
dirs = "5.0"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
include_dir = "0.7"
lazy_static = "1.4"
toml = "0.8.22"


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-audio-types-rs = "0.3.4"
